[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/themes/h2.tres" type="Theme" id=1]
[ext_resource path="res://scripts/row.gd" type="Script" id=2]

[node name="Row" type="HBoxContainer"]
anchor_right = 1.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="IndexContainer" type="AspectRatioContainer" parent="."]
margin_right = 80.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
stretch_mode = 0

[node name="Label" type="Label" parent="IndexContainer"]
margin_top = 3.0
margin_right = 80.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "test"

[node name="Id" type="Label" parent="IndexContainer"]
visible = false
margin_top = 3.0
margin_right = 80.0
margin_bottom = 27.0

[node name="NameContainer" type="AspectRatioContainer" parent="."]
margin_left = 84.0
margin_right = 487.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NameContainer"]
margin_left = 186.5
margin_top = 3.0
margin_right = 216.5
margin_bottom = 27.0
size_flags_horizontal = 3
text = "test"

[node name="GarageContainer" type="AspectRatioContainer" parent="."]
margin_left = 491.0
margin_right = 612.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Label" type="Label" parent="GarageContainer"]
margin_left = 45.5
margin_top = 3.0
margin_right = 75.5
margin_bottom = 27.0
size_flags_horizontal = 3
text = "test"

[node name="PhotoContainer" type="AspectRatioContainer" parent="."]
margin_left = 616.0
margin_right = 818.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="PhotoContainer"]
margin_left = 44.5
margin_right = 157.5
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PhotoContainer/HBoxContainer"]
margin_right = 113.0
margin_bottom = 30.0
alignment = 1

[node name="ViewPhotoButton" type="Button" parent="PhotoContainer/HBoxContainer/VBoxContainer"]
margin_right = 113.0
margin_bottom = 30.0
text = "Посмотреть"

[node name="ProfileContainer" type="AspectRatioContainer" parent="."]
margin_left = 822.0
margin_right = 1024.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="ProfileContainer"]
margin_left = 30.5
margin_right = 171.5
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ProfileContainer/HBoxContainer"]
margin_right = 141.0
margin_bottom = 30.0
alignment = 1

[node name="ProfileButton" type="Button" parent="ProfileContainer/HBoxContainer/VBoxContainer"]
margin_right = 141.0
margin_bottom = 30.0
text = "Редактировать"

[connection signal="pressed" from="PhotoContainer/HBoxContainer/VBoxContainer/ViewPhotoButton" to="." method="_on_ViewPhotoButton_pressed"]
[connection signal="pressed" from="ProfileContainer/HBoxContainer/VBoxContainer/ProfileButton" to="." method="_on_ProfileButton_pressed"]
